--- a/vetkoek/package.json
+++ b/vetkoek/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vetkoek",
-  "version": "0.0.1",
+  "name": "kelomail",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -10,8 +10,11 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "react": "18.0.0",
-    "react-native": "0.69.3"
+    "react-dom": "^18.2.0",
+    "react-native": "0.69.3",
+    "react-native-web": "^0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
