--- a/vetkoek/package.json
+++ b/vetkoek/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "build": "rm -rf dist/ && webpack --mode=production --config webpack.config.js",
+    "build": "webpack --mode=production --config webpack.config.js",
     "web": "webpack serve --mode=development --config webpack.config.js",
     "start": "react-native start",
     "test": "jest",
