--- a/vetkoek/package.json
+++ b/vetkoek/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.2.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -14,7 +15,6 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
     "react-native": "^0.69.4",
     "react-native-web": "^0.18.7",
     "react-scripts": "5.0.1",
