--- a/vetkoek/package.json
+++ b/vetkoek/package.json
@@ -16,6 +16,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-native": "^0.69.4",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-web": "^0.18.7",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
