Add create component script

--- a/vetkoek/Makefile
+++ b/vetkoek/Makefile
@@ -4,5 +4,8 @@ init:
 page: 
 	python scripts/manage.py startpage
  
+component: 
+	python scripts/manage.py create_component
+ 
 serve: 
 	yarn run start
