--- a/vetkoek/package.json
+++ b/vetkoek/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "@react-oauth/google": "^0.2.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -17,6 +19,8 @@
     "react-dom": "^18.2.0",
     "react-native": "^0.69.4",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
     "react-native-web": "^0.18.7",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
