--- a/vetkoek/package.json
+++ b/vetkoek/package.json
@@ -6,6 +6,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-oauth/google": "^0.2.6",
+    "@risingstack/react-easy-state": "^6.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
