--- a/vetkoek/package.json
+++ b/vetkoek/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-native": "^0.69.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
