--- a/vetkoek/package.json
+++ b/vetkoek/package.json
@@ -5,22 +5,22 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
-    "@react-oauth/google": "^0.2.6",
     "@risingstack/react-easy-state": "^6.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
+    "@types/node": "^18.7.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
-    "js-cookie": "^3.0.1",
+    "password-validator": "^5.3.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-native": "^0.69.4",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
@@ -54,7 +54,6 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.2",
     "@types/react-native": "^0.69.5"
   }
 }
