--- a/vetkoek/package.json
+++ b/vetkoek/package.json
@@ -21,6 +21,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-native": "^0.69.4",
     "react-native-awesome-alerts": "^2.0.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
