--- a/vetkoek/package.json
+++ b/vetkoek/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "javascript-time-ago": "^2.5.7",
     "password-validator": "^5.3.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
@@ -28,6 +29,7 @@
     "react-native-web": "^0.18.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-time-ago": "^7.2.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
